--- a/www/plugin.xml
+++ b/www/plugin.xml
@@ -16,6 +16,19 @@
       <engine name="cordova" version=">=3.0.0"/>
    </engines>
 
+   <dependency id="cordova-plugin-geolocation" version="1.0.1" />
+  <js-module src="www/CheckGPS.js" name="CheckGPS">
+    <clobbers target="CheckGPS" />
+  </js-module>
+  <platform name="android">
+    <source-file src="src/android/CheckGPS.java" target-dir="src/de/fastr/phonegap/plugins" />
+    <config-file target="res/xml/config.xml" parent="/*">
+      <feature name="CheckGPS">
+        <param name="android-package" value="de.fastr.phonegap.plugins.CheckGPS"/>
+      </feature>
+    </config-file>
+  </platform>
+
    <platform name="android">
       <config-file target="config.xml" parent="/*">
          <feature name="VolumeControl">
